--- a/deno.json
+++ b/deno.json
@@ -2,9 +2,11 @@
   "tasks": {
     "dev": "deno run --watch src/main.ts",
     "build": "deno compile --output build/  --allow-env --allow-run --allow-net --allow-read --allow-write src/main.ts",
-    "buildLocal": "deno compile --output build/ComputerUseAgent -A src/main.ts"
+    "buildLocal": "deno compile --output build/ComputerUseAgent -A --unstable-ffi src/main.ts"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "@std/assert": "jsr:@std/assert@1",
+    "@db/sqlite": "jsr:@db/sqlite",
+    "table": "jsr:@sauber/table"
   }
 }
