--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "deno.enable": true
+    "deno.enable": true,
+    // "github.copilot.chat.codeGeneration.instructions": [
+    //     {
+    //         "text": "Act as an expert architect engineer and provide direction to your editor engineer. Study the change request and the current code. Describe how to modify the code to complete the request. The editor engineer will rely solely on your instructions, so make them unambiguous and complete. Explain all needed code changes clearly and completely, but concisely. Just show the changes needed.DO NOT show the entire updated function/file/etc!"
+    //     }
+    // ],
+    "github.copilot.editor.enableCodeActions": true,
 }
