--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -13,11 +13,11 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
         include:
           - os: ubuntu-latest
-            target: linux
+            target: x86_64-unknown-linux-gnu
           - os: windows-latest
-            target: windows
+            target: x86_64-pc-windows-msvc
           - os: macos-latest
-            target: darwin
+            target: x86_64-apple-darwin
 
     steps:
       - uses: actions/checkout@v4
