--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,14 +10,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
         include:
           - os: ubuntu-latest
-            target: linux
+            target: x86_64-unknown-linux-gnu
           - os: windows-latest
-            target: windows
+            target: x86_64-pc-windows-msvc
           - os: macos-latest
-            target: darwin
+            target: x86_64-apple-darwin
 
     steps:
       - uses: actions/checkout@v4
