--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -9,20 +9,21 @@ permissions:
   contents: write
   
 
-
 jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
+            release_name: ComputerUseAgent-linux
           - os: windows-latest
             target: x86_64-pc-windows-msvc
+            release_name: ComputerUseAgent-windows
           - os: macos-latest
             target: x86_64-apple-darwin
+            release_name: ComputerUseAgent-macos
 
     steps:
       - uses: actions/checkout@v4
@@ -43,7 +44,7 @@ jobs:
           echo "version=${LATEST_TAG}-${COMMIT_HASH}" >> $GITHUB_OUTPUT
 
       - name: Build binary
-        run: deno compile --allow-all --target ${{ matrix.target }} --output ComputerUseAgent src/main.ts
+        run: deno compile --allow-all --target ${{ matrix.target }} --output ${{ matrix.release_name }} src/main.ts
 
       - name: Upload Release Asset
         uses: softprops/action-gh-release@v2
