Enhance session management by adding system info to prompts and refactor command execution in Bash handlers

--- a/deno.json
+++ b/deno.json
@@ -5,9 +5,10 @@
     "buildLocal": "deno compile --output build/ComputerUseAgent -A --unstable-ffi src/main.ts"
   },
   "imports": {
+    "@cliffy/prompt": "jsr:@cliffy/prompt@^1.0.0-rc.7",
     "@std/assert": "jsr:@std/assert@1",
     "@db/sqlite": "jsr:@db/sqlite",
     "table": "jsr:@sauber/table",
-    "anthropic": "npm:@anthropic-ai/sdk"
+    "anthropic": "npm:@anthropic-ai/sdk",
   }
 }
