Update changelog and README to reflect new export functionality and enhanced session management

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,4 +6,7 @@
     //     }
     // ],
     "github.copilot.editor.enableCodeActions": true,
+    "chat.promptFiles": {
+        "prompts": true
+    }
 }
