--- a/deno.json
+++ b/deno.json
@@ -6,9 +6,9 @@
   },
   "imports": {
     "@cliffy/prompt": "jsr:@cliffy/prompt@^1.0.0-rc.7",
-    "@std/assert": "jsr:@std/assert@1",
+    "@std/assert": "jsr:@std/assert@^1.0.11",
     "@db/sqlite": "jsr:@db/sqlite",
     "table": "jsr:@sauber/table",
-    "anthropic": "npm:@anthropic-ai/sdk",
+    "anthropic": "npm:@anthropic-ai/sdk@0.37.0",
   }
 }
